# Sensor_Data_Project

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  mypy.ini  project_outline.md  pyproject.toml  requirements.txt
docker/: Dockerfile  maintenance.Dockerfile  test.Dockerfile  wait-for-mongodb.sh
docs/: README.md  dataset_documentation.md  docker_setup.md  maintenance_setup.md  performance_test_proof.md  phase2_implementation.md  phase2_implementation_summary.md  phase2_reflection.md
src/: check_records.py  load_data.py  main.py  maintenance.py  test_comprehensive_optimization.py  test_csv_reading.py  test_index_performance.py  test_performance.py
src/config/: settings.py
src/data_processing/: __init__.py  csv_processor.py  processor.py  query_data.py
src/data_processing/tests/: __init__.py  test_processor.py
src/utils/: helpers.py
