[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sensor-data-processor"
version = "0.1.0"
description = "A data processing system for environmental sensor data"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.0"
pymongo = "^4.0.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"
psutil = "^5.9.0"
dnspython = "^2.7.0"
python-dateutil = "^2.9.0"
pytz = "^2025.2"
tzdata = "^2025.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
mongomock = "^4.1.2"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.13.2"
mypy = "^1.0.0"
pylint = "^3.0.3"
pandas-stubs = "^2.2.3.250308"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "src/data_processing/tests"
]
python_files = ["test_*.py"]
addopts = "--cov=src/data_processing --cov-report=term-missing" 
