[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sensor-data-processor"
version = "0.1.0"
description = "A data processing system for environmental sensor data"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.0"
pymongo = "^4.0.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"
psutil = "^5.9.0"
dnspython = "^2.7.0"
python-dateutil = "^2.9.0"
pytz = "^2025.2"
tzdata = "^2025.2"
requests = "^2.31.0"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88 
